--- a/bazel/cargo/BUILD.bazel
+++ b/bazel/cargo/BUILD.bazel
@@ -65,3 +65,11 @@ alias(
         "manual",
     ],
 )
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
