--- a/bazel/cargo/remote/BUILD.num-traits-0.2.14.bazel
+++ b/bazel/cargo/remote/BUILD.num-traits-0.2.14.bazel
@@ -29,8 +29,35 @@ licenses([
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
+cargo_build_script(
+    name = "num_traits_build_script",
+    srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
+    crate_features = [
+    ],
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.2.14",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@raze__autocfg__1_0_1//:autocfg",
+    ],
+)
 
 rust_library(
     name = "num_traits",
@@ -39,6 +66,7 @@ rust_library(
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
+    data = [],
     edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
@@ -50,6 +78,7 @@ rust_library(
     version = "0.2.14",
     # buildifier: leave-alone
     deps = [
+        ":num_traits_build_script",
     ],
 )
 
