--- a/bazel/cargo/remote/BUILD.chrono-0.4.19.bazel
+++ b/bazel/cargo/remote/BUILD.chrono-0.4.19.bazel
@@ -7,7 +7,7 @@ DO NOT EDIT! Replaced on runs of cargo-raze
 
 # buildifier: disable=load
 load(
-    "@io_bazel_rules_rust//rust:rust.bzl",
+    "@rules_rust//rust:rust.bzl",
     "rust_binary",
     "rust_library",
     "rust_test",
@@ -69,15 +69,15 @@ rust_library(
     ] + selects.with_or({
         # cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))
         (
-            "@io_bazel_rules_rust//rust/platform:wasm32-unknown-unknown",
+            "@rules_rust//rust/platform:wasm32-unknown-unknown",
         ): [
         ],
         "//conditions:default": [],
     }) + selects.with_or({
         # cfg(windows)
         (
-            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
-            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
+            "@rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@rules_rust//rust/platform:x86_64-pc-windows-msvc",
         ): [
             "@raze__winapi__0_3_9//:winapi",
         ],
