--- a/bazel/cargo/remote/BUILD.once_cell-1.7.2.bazel
+++ b/bazel/cargo/remote/BUILD.once_cell-1.7.2.bazel
@@ -30,14 +30,27 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "ahash" with type "bench" omitted
+# Unsupported target "bench" with type "example" omitted
 
-# Unsupported target "map" with type "bench" omitted
+# Unsupported target "bench_acquire" with type "example" omitted
+
+# Unsupported target "bench_vs_lazy_static" with type "example" omitted
+
+# Unsupported target "lazy_static" with type "example" omitted
+
+# Unsupported target "reentrant_init_deadlocks" with type "example" omitted
+
+# Unsupported target "regex" with type "example" omitted
+
+# Unsupported target "test_synchronization" with type "example" omitted
 
 rust_library(
-    name = "ahash",
+    name = "once_cell",
     srcs = glob(["**/*.rs"]),
     crate_features = [
+        "alloc",
+        "race",
+        "unstable",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
@@ -50,14 +63,10 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.4.7",
+    version = "1.7.2",
     # buildifier: leave-alone
     deps = [
     ],
 )
 
-# Unsupported target "bench" with type "test" omitted
-
-# Unsupported target "map_tests" with type "test" omitted
-
-# Unsupported target "nopanic" with type "test" omitted
+# Unsupported target "it" with type "test" omitted
